# bimodality

./: .gitignore  ANU_preprocessing.R  README.md  anu_preprocessing.R  bimodality.R  data_analysis.py  fake_data.R  generate_fake_data.py  one_class_stats.r  preprocessing.R  pyproject.toml
aggregate_data/: gaussuniversity.csv  neithertonpolytechnic.csv  twohumpscollege.csv  uoftruncation.csv
gaussuniversity/: 2000-1-CSC-100.csv  2000-1-CSC-101.csv  2000-1-CSC-105.csv  2000-1-CSC-200.csv  2000-1-CSC-201.csv  2000-1-CSC-202.csv  2000-1-CSC-300.csv  2000-1-CSC-301.csv  2000-1-CSC-302.csv  2000-1-CSC-333.csv  2000-1-CSC-400.csv  2000-2-CSC-100.csv  2000-2-CSC-101.csv  2000-2-CSC-105.csv  2000-2-CSC-200.csv  2000-2-CSC-201.csv  2000-2-CSC-202.csv  2000-2-CSC-300.csv  2000-2-CSC-301.csv  2000-2-CSC-302.csv  2000-2-CSC-333.csv  2000-2-CSC-400.csv  2001-1-CSC-100.csv  2001-1-CSC-101.csv  2001-1-CSC-105.csv  2001-1-CSC-200.csv  2001-1-CSC-201.csv  2001-1-CSC-202.csv  2001-1-CSC-300.csv  2001-1-CSC-301.csv  2001-1-CSC-302.csv  2001-1-CSC-333.csv  2001-1-CSC-400.csv  2001-2-CSC-100.csv  2001-2-CSC-101.csv  2001-2-CSC-105.csv  2001-2-CSC-200.csv  2001-2-CSC-201.csv  2001-2-CSC-202.csv  2001-2-CSC-300.csv  (+70 more)
neithertonpolytechnic/: 2000-1-CSC-100.csv  2000-1-CSC-101.csv  2000-1-CSC-105.csv  2000-1-CSC-200.csv  2000-1-CSC-201.csv  2000-1-CSC-202.csv  2000-1-CSC-300.csv  2000-1-CSC-301.csv  2000-1-CSC-302.csv  2000-1-CSC-333.csv  2000-1-CSC-400.csv  2000-2-CSC-100.csv  2000-2-CSC-101.csv  2000-2-CSC-105.csv  2000-2-CSC-200.csv  2000-2-CSC-201.csv  2000-2-CSC-202.csv  2000-2-CSC-300.csv  (+92 more)
(+1641 files in other folders)
