[tool.poetry]
name = "bimodality"
version = "0.1.0"
description = ""
authors = ["Elizabeth Patitsas", "Ben Swift"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.5"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
